--- a/rl/style.css
+++ b/rl/style.css
@@ -8,10 +8,9 @@
 /* ------------------------------------------------------------------- */
 /* Import Section
 ---------------------------------------------------------------------- */
-@import url("http://www.roclabel.com/core/css/base.css");				/* Default Reset, Typography, Forms, etc. */
-@import url("http://www.roclabel.com/core/css/responsive.css");			/* Responsive Grid */
-@import url("http://www.roclabel.com/core/css/font-awesome.css");		/* Font Awesome Icons */
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800");
+		/* Responsive Grid */
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");		/* Font Awesome Icons */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800");
 
 
 /* ------------------------------------------------------------------- */
